# Ozon_test_task

./: ReadME.md
notification-service/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  logger.py  pyproject.toml
notification-service/src/: logger.py  main.py
notification-service/src/core/: constants.py  database.py  settings.py
notification-service/src/models/: __init__.py  notification.py
notification-service/src/routers/: __init__.py  notifications.py
notification-service/src/schemas/: __init__.py  notification.py
notification-service/src/services/: __init__.py  notification_service.py
notification-service/tests/: __init__.py  conftest.py  test_notifications.py
